[gd_scene load_steps=2 format=3 uid="uid://c3bev7lk7awbq"]

[ext_resource type="Script" path="res://Suppliers/supplier.gd" id="1_kx6ed"]

[node name="Supplier" type="PanelContainer"]
custom_minimum_size = Vector2(200, 300)
offset_right = 29.0
offset_bottom = 310.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kx6ed")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SuppHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/SuppHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="SupplierImage" type="TextureRect" parent="MarginContainer/VBoxContainer/SuppHBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/SuppHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 42
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 42

[node name="SupplierInfo" type="RichTextLabel" parent="MarginContainer/VBoxContainer/SuppHBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "

bonjoir"
fit_content = true

[node name="PotHBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PotHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="PotionImage" type="TextureRect" parent="MarginContainer/VBoxContainer/PotHBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PotHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 42
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 42

[node name="PotionInfo" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PotHBoxContainer2/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "

test"
fit_content = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
